--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@angular/platform-browser-dynamic": "9.0.5",
     "@angular/router": "9.0.5",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "angular-datatables": "^9.0.1",
     "bootstrap": "4.1.3",
     "chart.js": "2.7.3",
     "clipboard": "2.0.4",
     "core-js": "3.6.4",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
+    "jquery": "^3.4.1",
     "ngx-clipboard": "13.0.0",
     "ngx-toastr": "12.0.0",
     "nouislider": "13.1.1",
@@ -39,8 +43,10 @@
     "@angular/cli": "9.0.5",
     "@angular/compiler-cli": "9.0.5",
     "@angular/language-service": "9.0.5",
+    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "3.5.8",
     "@types/jasminewd2": "2.0.8",
+    "@types/jquery": "^3.3.33",
     "@types/node": "13.7.7",
     "codelyzer": "5.2.1",
     "jasmine-core": "3.5.0",
