--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "argon-dashboard-angular",
+  "name": "covid-19-tracker",
   "version": "1.1.0",
   "scripts": {
     "ng": "ng",
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "9.0.5",
+    "@angular/cdk": "^9.1.3",
     "@angular/common": "9.0.5",
     "@angular/compiler": "9.0.5",
     "@angular/core": "9.0.5",
@@ -22,14 +23,18 @@
     "@angular/platform-browser": "9.0.5",
     "@angular/platform-browser-dynamic": "9.0.5",
     "@angular/router": "9.0.5",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "angular-bootstrap-md": "^9.0.0",
     "angular-datatables": "^9.0.1",
+    "animate.css": "^3.7.2",
     "bootstrap": "4.1.3",
     "chart.js": "2.7.3",
     "clipboard": "2.0.4",
     "core-js": "3.6.4",
     "datatables.net": "^1.10.20",
     "datatables.net-dt": "^1.10.20",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-clipboard": "13.0.0",
     "ngx-toastr": "12.0.0",
