--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "datatables.net-dt": "^1.10.20",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ngx-bootstrap": "^5.5.0",
     "ngx-clipboard": "13.0.0",
     "ngx-toastr": "12.0.0",
     "nouislider": "13.1.1",
