--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.12",
+    "@amcharts/amcharts4-geodata": "^4.1.12",
     "@angular/animations": "9.0.5",
     "@angular/cdk": "^9.1.3",
     "@angular/common": "9.0.5",
@@ -39,10 +41,12 @@
     "ngx-bootstrap": "^5.5.0",
     "ngx-clipboard": "13.0.0",
     "ngx-toastr": "12.0.0",
+    "ngx-perfect-scrollbar": "^9.0.0",
     "nouislider": "13.1.1",
     "novelcovid": "1.0.6",
     "rxjs": "6.5.4",
-    "zone.js": "0.10.2"
+    "zone.js": "0.10.2",
+    "fuse.js": "^3.4.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.5",
